<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0BACC"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_row="0"
        android:layout_column="0"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/tipBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@id/mainBtn"
        tools:layout_editor_absoluteY="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">

        <TextView
            android:id="@+id/gardeTextView"
            android:layout_width="112dp"
            android:layout_height="50dp"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="@string/enter_grade"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/gradeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/amount_background"
            android:inputType="number"
            android:maxLength="3" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/submit_grade" />

    <TextView
        android:id="@+id/gradeResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <Button
        android:id="@+id/mainBtn"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="top"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#CDDC39"
        android:text="@string/mainBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</GridLayout>