<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="#C0BACC"
tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_row="0"
        android:layout_column="0"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/tipBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@id/mainBtn"
        tools:layout_editor_absoluteY="3dp" />

    <GridLayout
        android:layout_row="2"
        android:layout_column="0">

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:contentDescription="@string/enter_amount"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:padding="@dimen/textview_padding"
            android:paddingLeft="@dimen/textview_padding"
            android:paddingTop="@dimen/textview_padding"
            android:paddingRight="@dimen/textview_padding"
            android:paddingBottom="@dimen/textview_padding" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:background="@drawable/amount_background"
            android:elevation="@dimen/elevation"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:padding="@dimen/textview_padding"
            android:paddingLeft="@dimen/textview_padding"
            android:paddingTop="@dimen/textview_padding"
            android:paddingRight="@dimen/textview_padding"
            android:paddingBottom="@dimen/textview_padding" />

        <SeekBar
            android:id="@+id/percentageSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/seekbar_height"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:max="30"
            android:progress="15" />

        <TextView
            android:id="@+id/tipLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:ems="10"
            android:hint="@string/tip"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/result_background"
            android:elevation="@dimen/elevation"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:padding="@dimen/textview_padding"
            android:paddingLeft="@dimen/textview_padding"
            android:paddingTop="@dimen/textview_padding"
            android:paddingRight="@dimen/textview_padding"
            android:paddingBottom="@dimen/textview_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/totalLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:ems="10"
            android:hint="@string/total"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/result_background"
            android:elevation="@dimen/elevation"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:padding="@dimen/textview_padding"
            android:paddingLeft="@dimen/textview_padding"
            android:paddingTop="@dimen/textview_padding"
            android:paddingRight="@dimen/textview_padding"
            android:paddingBottom="@dimen/textview_padding" />

        <TextView
            android:id="@+id/percentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/tip_percentage"
            android:importantForAutofill="no" />
    </GridLayout>


    <Button
        android:id="@+id/mainBtn"
        android:layout_width="225dp"
        android:layout_height="54dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#CDDC39"
        android:text="@string/mainBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</GridLayout>